cmake_minimum_required(VERSION 3.19)
project(data_struct____algorithm)

set(CMAKE_CXX_STANDARD 20)

add_executable(data_struct____algorithm main.cpp)
add_executable(algorithm championship/championship.cpp)
add_executable(Knapsack Knapsack/Knapsack.cpp)
add_executable(Graph Graph/Matrix.cpp)
add_executable(Classification Classification/KNN.cpp)
add_executable(Sort Sort/quick.cpp)
add_executable(back_tracking back_tracking/N-Queens.cpp)
